minor bug fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             or on your next road trip.</p>
         </div>
         <div class="btn">
-          <button class="btn1"><a href="#">Learn More</a></button>
+          <button class="btn1">Learn More</button>
         </div>
       </div>
 
@@ -41,7 +41,7 @@
             and off-road adventures.</p>
         </div>
         <div class="btn">
-          <button class="btn2"><a href="#">Learn More</a></button>
+          <button class="btn2">Learn More</button>
         </div>
       </div>
 
@@ -54,7 +54,7 @@
             rental and arrive in style.</p>
         </div>
         <div class="btn">
-          <button class="btn3"><a href="#">Learn More</a></button>
+          <button class="btn3">Learn More</button>
         </div>
       </div>
     </div>
